--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# #config server
+# server.address=localhost
+# server.port=8081
+#config spring security
+spring.security.user.name=a
+spring.security.user.password=1
+#config view engine
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
